welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: expected class or object definition
def getMotif(){
^